--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,19 @@
 -e .
 
 # external requirements
+python-dotenv>=0.5.1
+opencv_python_headless==4.4.0.46
+tensorflow==2.2.0
+seaborn==0.11.0
+pandas==1.1.3
+numpy==1.19.2
+matplotlib==3.3.3
+scikit_learn==0.23.2
 click
 Sphinx
 coverage
 awscli
 flake8
-python-dotenv>=0.5.1
+
+# init:
+# pip -r requirements.txt
