--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ tox.ini
 notebooks/
 Makefile
 docs
-references
 references/
 /references/
 /docs/
+/credentials/
 
 
 # Byte-compiled / optimized / DLL files
