--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ references/
 /references/
 /docs/
 /web_app/credentials/
+/static/uploads/
+/static/uploads/*
 
 
 # Byte-compiled / optimized / DLL files
