--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,24 @@ flask = "^2.3.2"
 opencv-python = "^4.7.0.72"
 
 
+[tool.black]
+line-length = 100
+target-version = ['py310']
+skip-string-normalization = true
+
+
+[tool.isort]
+profile = "black"
+line_length = 100
+
+
+[tool.mypy]
+python_version = "3.10"
+ignore_missing_imports = true
+show_error_codes = true
+check_untyped_defs = true
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
