--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,12 @@ repos:
   -  id: check-ast
   -  id: debug-statements
   -  id: detect-private-key
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  # Ruff version.
+  rev: "v0.0.265"
+  hooks:
+    - id: ruff
+      args: [--fix, --exit-non-zero-on-fix]
 - repo: https://github.com/asottile/pyupgrade
   rev: v3.4.0
   hooks:
