--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ flask = "^2.3.2"
 opencv-python = "^4.7.0.72"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.3.1"
+
 [tool.black]
 line-length = 100
 target-version = ['py310']
