--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,16 @@ readme = "README.md"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.12"
-tensorflow = "<2.12.0"
+python = "~3.10"
 matplotlib = "^3.7.1"
-numpy = "^1.24.3"
+numpy = "^1.23.0"
 scikit-learn = "^1.2.2"
 seaborn = "^0.12.2"
 pandas = "^2.0.1"
 flask = "^2.3.2"
 opencv-python = "^4.7.0.72"
+keras = "^2.12.0"
+tensorflow = "^2.12.0"
 
 
 [tool.poetry.group.test.dependencies]
