--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,15 @@ readme = "README.md"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = "~3.10"
+python = "~3.9"
+flask = "~1.1.2"
 matplotlib = "^3.7.1"
-numpy = "^1.23.0"
-scikit-learn = "^1.2.2"
-seaborn = "^0.12.2"
-pandas = "^2.0.1"
-flask = "^2.3.2"
-opencv-python = "^4.7.0.72"
-keras = "^2.12.0"
-tensorflow = "^2.12.0"
+numpy = "^1.22.0"
+opencv-python = "~4.4.0.46"
+pandas = "~1.1.3"
+scikit-learn = "~0.23.2"
+seaborn = "~0.12.2"
+tensorflow = "~2.7"
 
 
 [tool.poetry.group.test.dependencies]
@@ -46,7 +45,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 select = ["E", "F", "W", "C90", "PL", "TRY", "RUF", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PT", "PTH", "PYI", "RET", "RSE", "SIM", "SLF", "TCH", "TID", "UP", "YTT", "ANN", "S", "Q", "T", "D", "N", "A", "B", "C", "C4", "I"]
-ignore = ["E501", "D100", "D103", "D104", "PLR2004", "S101"]
+ignore = ["E501", "D100", "D103", "D104", "D203", "D213", "PLR2004", "S101"]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["A", "B", "C", "C4", "D", "E", "F", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
